--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<h2 class="text-center mb-4 fw-bold" style="color: #34414b;">Details of the Post!</h2>
+
 <div class="container mt-4">
     <div class="card">
         <div class="card-body">
@@ -224,7 +226,7 @@
                 {% endfor %}
 
                 <!-- Comment Form -->
-                <form action="{% url 'add_comment' post.id %}" method="post" class="mt-3">
+                <form action="{% url 'posts:add_comment' post.id %}" method="post" class="mt-3">
                     {% csrf_token %}
                     <textarea name="content" rows="2" maxlength="500" placeholder="Add a comment..." required class="form-control"></textarea>
                     <button type="submit" class="btn btn-secondary mt-2">Comment</button>
@@ -233,7 +235,7 @@
 
             <!-- Back Button -->
             <div class="mt-4">
-                <a href="{% url 'post_list' %}" class="btn btn-secondary">Back to Posts</a>
+                <a href="{% url 'posts:post_list' %}" class="btn btn-secondary">Back to List</a>
             </div>
         </div>
     </div>
