--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -41,8 +41,8 @@
                                     {% endif %}
                                 </a>
                             {% else %}
-                                <div class="deleted-user-pic-container">
-                                    <div class="deleted-user-pic-placeholder"></div>
+                                <div class="anonymous-user-pic-container">
+                                    <div class="anonymous-user-pic-placeholder"></div>
                                 </div>
                             {% endif %}
                         </div>
@@ -54,7 +54,7 @@
                                         {{ post.get_username }}
                                     </a>
                                 {% else %}
-                                    <span class="deleted-username">{{ post.get_username }}</span>
+                                    <span class="anonymous-username">Anonymous User</span>
                                 {% endif %}
                             </h5>
                             <small class="text-muted">Posted on {{ post.created_at }}</small>
@@ -349,31 +349,26 @@
         color: #212529;
     }
 
-    .deleted-username {
-        color: #ff6b6b;
+    .anonymous-username {
+        color: #6c757d;
         opacity: 0.5;
     }
 
-    .deleted-user-pic-container {
+    .anonymous-user-pic-container {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        border: 2px solid #ff6b6b;
+        border: 2px solid #6c757d;
         overflow: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .deleted-user-pic-placeholder {
+    .anonymous-user-pic-placeholder {
         width: 100%;
         height: 100%;
-        background-color: #e9ecef;
-        opacity: 0.7;
-    }
-
-    .deleted-username {
-        color: #ff6b6b;
+        background-color: #6c757d;
         opacity: 0.5;
     }
 </style>
